# LiveStream

./: .gitignore  README.md
AndroidPlayer/: build.gradle
AndroidPlayer/app/: build.gradle
AndroidPlayer/app/src/androidTest/java/com/blueberry/player/: ExampleInstrumentedTest.java
AndroidPlayer/app/src/main/: AndroidManifest.xml
AndroidPlayer/app/src/main/res/layout/: activity_main.xml  activity_player.xml
AndroidPlayer/gradle/wrapper/: gradle-wrapper.properties
AndroidPublisher/: .gitignore  build.gradle  settings.gradle
AndroidPublisher/app/: build.gradle
AndroidPublisher/app/src/main/: AndroidManifest.xml
AndroidPublisher/app/src/main/cpp/: CMakeLists.txt  Rtmp.cpp  Rtmp.h  lang.h  publish.cpp  publish_jni.cpp
AndroidPublisher/app/src/main/res/layout/: activity_main.xml
AndroidPublisher/doc/: tasks.md
AndroidPublisher/doc/design/: design.oom  design.pjb  design.prj
AndroidPublisher/doc/flow/: flow.prj
AndroidPublisher/gradle/wrapper/: gradle-wrapper.properties
AndroidPublisher/rtmp/include/polarssl/: config.h
AndroidPublisher/rtmplive/: build.gradle
AndroidPublisher/rtmplive/src/main/: AndroidManifest.xml
AndroidPublisher/rtmplive/src/main/cpp/: AACAudioData.cpp  AACAudioData.h  AVCDecoderConfiguration.cpp  AVCDecoderConfiguration.h  AVCNaluPacket.cpp  AVCNaluPacket.h  AVCVideoPacket.cpp  AVCVideoPacket.h  AudioData.cpp  AudioData.h  BitStream.cpp  BitStream.h  CMakeLists.txt  FLVTag.cpp  FLVTag.h  Golomb.cpp  Golomb.h  H264Params.cpp  H264Params.h  H264Parser.cpp  H264Parser.h  HexUtil.cpp  HexUtil.h  IAVCPacketData.cpp  IAVCPacketData.h  IBuffer.cpp  IBuffer.h  IFLVTagData.cpp  IFLVTagData.h  ISoundData.cpp  ISoundData.h  IVideoPacket.cpp  IVideoPacket.h  OnMetaData.cpp  OnMetaData.h  Rtmp.cpp  Rtmp.h  RtmpClient.cpp  RtmpClient.h  VideoData.cpp  (+6 more)
AndroidPublisher/rtmplive/src/main/cpp/librtmp/: amf.c  librtmp.3  librtmp.3.html  rtmp.c
AndroidPublisher/rtmplive/src/main/res/values/: strings.xml  styles.xml
AndroidPublisher/sample/: build.gradle
AndroidPublisher/sample/src/main/: AndroidManifest.xml
AndroidPublisher/sample/src/main/res/layout/: act_avc.xml  act_start.xml  activity_main.xml
AndroidPublisher/sample/src/main/res/values/: strings.xml
rtmplive-sdk/: rtmplive-0.0.1.rar
(+92 files in other folders)
